# deterministic-deps

./: .deterministic-deps.yml  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  action.yml  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  rule_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  fork-proposal-issue.yml  release.yml  security-hygiene.yml  v1-tag-smoke.yml
.ozark/fork-proposals/: _TEMPLATE.md
__tests__/: action-metadata.test.ts  config.test.ts  fixtures.test.ts  redaction.test.ts  remote-helpers.test.ts  report.test.ts  scanner.test.ts
__tests__/fixtures/config/ecosystem-options/: config.json  package-lock.json  package.json
__tests__/fixtures/config/rule-controls/: Dockerfile  config.json  expected-findings.json  requirements.txt
__tests__/fixtures/containers/deterministic/: Dockerfile  docker-compose.yml
__tests__/fixtures/containers/floating-images/: Dockerfile  docker-compose.yml  expected-findings.json
__tests__/fixtures/github-actions/floating-actions/: expected-findings.json
__tests__/fixtures/github-actions/floating-runner-array/: expected-findings.json
__tests__/fixtures/go/deterministic/: go.sum
__tests__/fixtures/go/floating-replace/: expected-findings.json  go.mod
__tests__/fixtures/go/parser-aware/: expected-findings.json  go.mod  go.sum
__tests__/fixtures/go/sum-disabled/: config.json  go.mod
__tests__/fixtures/jvm/deterministic/: pom.xml
__tests__/fixtures/jvm/dynamic-version/: build.gradle  expected-findings.json  pom.xml
__tests__/fixtures/jvm/gradle-lock-metadata/: build.gradle  gradle.lockfile
__tests__/fixtures/jvm/gradle-metadata-disabled/: build.gradle.kts  config.json  expected-findings.json
__tests__/fixtures/jvm/gradle-parser-aware/: build.gradle  build.gradle.kts  expected-findings.json
__tests__/fixtures/rust/parser-aware/: Cargo.toml  expected-findings.json
__tests__/goldens/: report-findings.md  report-findings.sarif.json
docs/: configuration.md  deterministic-deps.schema.json  ecosystems.md  release-notes-v1.md  releasing.md  rules.md  sarif.md
scripts/: trim-dist.js
src/: config.ts  constants.ts  main.ts  paths.ts  redaction.ts  remote.ts  report.ts  rules.ts  scanner.ts  types.ts
src/rules/: index.ts
src/types/: osl-js-yaml.d.ts
(+59 files in other folders)
