[package]
name = "parser-aware"
version = "0.1.0"

[dependencies]
# commented = { git = "https://github.com/acme/commented.git", branch = "main" }
serde = "1"
floating = { git = "https://github.com/acme/floating.git", tag = "v1.0.0" }
pinned = { git = "https://github.com/acme/pinned.git", rev = "0123456789abcdef0123456789abcdef01234567" }
multiline = {
  git = "https://github.com/acme/multiline.git",
  branch = "main",
}

[workspace.dependencies]
workspace-floating = { git = "https://github.com/acme/workspace-floating.git", branch = "main" }

[dependencies.subtable-floating]
git = "https://github.com/acme/subtable-floating.git"
branch = "main"

[dependencies.subtable-pinned]
git = "https://github.com/acme/subtable-pinned.git"
rev = "0123456789abcdef0123456789abcdef01234567"

[target.'cfg(unix)'.dev-dependencies.target-subtable-floating]
git = "https://github.com/acme/target-subtable-floating.git"
branch = "main"

[patch.crates-io]
patch-floating = { git = "https://github.com/acme/patch-floating.git", branch = "main" }
patch-pinned = { git = "https://github.com/acme/patch-pinned.git", rev = "0123456789abcdef0123456789abcdef01234567" }

[replace]
"replace-floating:0.1.0" = { git = "https://github.com/acme/replace-floating.git", branch = "main" }
"replace-pinned:0.1.0" = { git = "https://github.com/acme/replace-pinned.git", rev = "0123456789abcdef0123456789abcdef01234567" }

[patch."https://github.com/acme/source"]
quoted-source-pinned = { git = "https://github.com/acme/quoted-source-pinned.git", rev = "0123456789abcdef0123456789abcdef01234567" }
quoted-source-floating = { git = "https://github.com/acme/quoted-source-floating.git", branch = "main" }

[patch."https://github.com/acme/source".quoted-subtable-floating]
git = "https://github.com/acme/quoted-subtable-floating.git"
branch = "main"
